# system-pulse-desktop

./: .dockerignore  .gitignore  Cargo.toml  README.md  package-lock.json
crates/system-pulse-db/: Cargo.toml
crates/system-pulse-db/src/: connection.rs  error.rs  lib.rs  migrations.rs
crates/system-pulse-db/src/models/: metric.rs  mod.rs  server.rs  session.rs  user.rs
crates/system-pulse-db/src/queries/: metrics.rs  mod.rs  servers.rs  sessions.rs  users.rs
crates/system-pulse-db/tests/: integration.rs
crates/system-pulse-server/: Cargo.toml
crates/system-pulse-server/src/: auth.rs  config.rs  crypto.rs  error.rs  extractors.rs  lib.rs  main.rs  ssh_metrics.rs
crates/system-pulse-server/src/handlers/: account.rs  auth.rs  health.rs  metrics.rs  mod.rs  servers.rs
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: account.rs  auth.rs  metrics.rs  mod.rs  servers.rs  window.rs
desktop/src-tauri/src/models/: error.rs
desktop/src-tauri/src/services/: auth.rs  crypto.rs  local_metrics.rs  mod.rs  ssh_metrics.rs
desktop/src/components/auth/: AuthForm.module.css  AuthForm.tsx
desktop/src/components/charts/: MetricChart.module.css  MetricChart.tsx
desktop/src/components/layout/: AppLayout.module.css  AppLayout.tsx  TitleBar.module.css  TitleBar.tsx
desktop/src/components/ui/: index.tsx  ui.module.css
desktop/src/hooks/: useMetrics.ts  useServers.ts
desktop/src/pages/: AccountPage.module.css  AccountPage.tsx  AddServerPage.module.css  AddServerPage.tsx  DashboardPage.module.css  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  ServerDetailPage.module.css  ServerDetailPage.tsx  ServersPage.module.css  ServersPage.tsx
desktop/src/store/: authStore.ts
desktop/src/styles/: globals.css
desktop/src/types/: index.ts
desktop/src/utils/: format.ts  invoke.ts
docker/: .env.example  Dockerfile  backup.sh  docker-compose.yml  restore.sh
