[package]
name = "system-pulse-db"
version = "0.1.0"
edition = "2021"
description = "Shared SQLite layer for System Pulse — models, migrations, and queries used by both the desktop app and the standalone server."

[dependencies]
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
    "macros",
] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
anyhow     = "1"
thiserror  = "1"
tracing    = "0.1"

[features]
test-util = []

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[dev-dependencies.system-pulse-db]
path = "."
features = ["test-util"]
