[package]
name = "system-pulse-server"
version = "0.1.0"
edition = "2021"
description = "Standalone HTTP API for System Pulse — same SQLite schema as the desktop app, deployable behind Docker with a persistent volume."

[[bin]]
name = "system-pulse-server"
path = "src/main.rs"

[dependencies]
system-pulse-db = { path = "../system-pulse-db" }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }

axum       = { version = "0.7", features = ["macros"] }
tower      = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio      = { version = "1", features = ["full"] }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
argon2       = { version = "0.5", features = ["std"] }
sha2         = "0.10"
hex          = "0.4"

chrono = { version = "0.4", features = ["serde"] }
uuid   = { version = "1", features = ["v4", "serde"] }

anyhow    = "1"
thiserror = "1"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy            = "0.15"
