[package]
name = "system-pulse-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "system_pulse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
system-pulse-db = { path = "../../crates/system-pulse-db" }

tauri              = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

# Async
tokio = { version = "1", features = ["full"] }

# Serde
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2       = { version = "0.5", features = ["std"] }

# Utils
uuid    = { version = "1", features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }
anyhow  = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex     = "0.4"

# Cross-platform local system metrics (CPU, RAM, disk, net, temp, load).
sysinfo    = "0.31"
once_cell  = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
