[package]
name = "system-pulse-desktop"
version = "1.0.0" #rel
edition = "2021"

[lib]
name = "system_pulse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
system-pulse-db = { path = "../../crates/system-pulse-db" }

tauri              = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

# async
tokio = { version = "1", features = ["full"] }

# serde
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# auth
jsonwebtoken = "9"
argon2       = { version = "0.5", features = ["std"] }

# utils
uuid    = { version = "1", features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }
anyhow  = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex     = "0.4"

sysinfo    = "0.31"
once_cell  = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
